--- a/index.html
+++ b/index.html
@@ -9,11 +9,35 @@
     <title>Monticello</title>
 </head>
 <body>
+    <header>
+        <nav class="nav">
+            <div class="nav-logo-wrap">
+                <img src="img/Logo-header.png" alt="logo" class="nav__logo">
+            </div>
+            <div class="nav-links">
+                <a href="#about" class="nav-link">About Us</a>
+                <a href="#gallery" class="nav-link">Project</a>
+                <a href="#news" class="nav-link">News</a>
+                <a href="#footer" class="nav-link">Contact</a>
+            </div>
+            <div class="nav-links-soc">
+                <a href="#" target="_blank" class="nav-link-soc">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="#" target="_blank" class="nav-link-soc">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="#" target="_blank" class="nav-link-soc">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
+        </nav>
+    </header>
     
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
